# GL_engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build-ninja.bat  main.cpp  todolist.txt
_project/assets/script/: script1.lua  script2.lua  test.lua
_project/assets/shader/: debugLine2D.glsl  default.glsl  pickingShader.glsl
_project/prefab/: Ball.pfb
_project/scene/: a.scene  b.scene
_project/script/: a.lua  b.lua  c.lua
assets/shader/: debugLine2D.glsl  default.glsl
include/engine/component/: Component.hpp  Sprite.hpp  SpriteRenderer.hpp  Spritesheet.hpp  Transform.hpp
include/engine/core/: AGuiObj.hpp  AScene.hpp  ASceneInitializer.hpp  ASerializableObj.hpp  AbstractScene.hpp  Camera.hpp  EditorSceneInitializer.hpp  GameObject.hpp  ImguiLayer.hpp  KeyListener.hpp  LevelEditorScene.hpp  LevelScene.hpp  MainWindow.hpp  ManagerWindow.hpp  MouseListener.hpp  Prefab.hpp  Prefabs.hpp  Scene.hpp  TestScene.hpp  Transform.hpp  Window.hpp  ZIndex.hpp
include/engine/editor/: FileDialog.hpp  FileSystemWindow.hpp  GameViewWindow.hpp  IProjectFileMonitor.hpp  MenuBar.hpp  MyImGui.hpp  ProjectManagerWindow.hpp  PropertiesWindow.hpp  SceneHierarchyWindow.hpp  WindowsProjectFileMonitor.hpp
include/engine/event/: Event.hpp  EventSystem.hpp  IObserver.hpp
include/engine/node/: EditorCameraControls.hpp  EditorGridLines.hpp  EditorMouseControls.hpp  EditorSpriteGizmo.hpp  GridLines.hpp  IUnselectableNode.h  IUnselectableNode.hpp  MouseControls.hpp  Node.hpp  PrefabNode.hpp  Sprite.hpp  SpriteRenderer.hpp  Spritesheet.hpp  TileMap.hpp
include/engine/physics2D/: ACollider.hpp  Angular.h  BodyType.hpp  Box2DCollider.hpp  CircleCollider.hpp  ColliderShape2D.hpp  Linear.hpp  Physics2D.hpp  RigidBody2D.hpp  ShapeType.hpp
include/engine/reflect/: Reflect.hpp
include/engine/renderer/: Animation.hpp  Box2dDebugDraw.hpp  Color.hpp  DebugDraw.hpp  FrameBuffer.hpp  Line2D.hpp  PickingTexture.hpp  Rect.hpp  RenderBatch.hpp  Renderer.hpp  Shader.hpp  Sprite.hpp  Spritesheet.hpp  Texture.hpp
include/engine/script/: IScriptLayer.hpp  LuaBinder.hpp  LuaGlobalBinder.hpp  LuaMathBinder.hpp  LuaNodeBinder.hpp  LuaScriptLayer.hpp  LuaScriptManager.hpp  Script.hpp
include/engine/util/: AssetPool.hpp  Common.hpp  Json.hpp  Mat4Utils.hpp  PrefabsUtils.hpp  Print.hpp  ReflectUtil.hpp  Setting.hpp  StringUtils.hpp  Time.hpp
include/glad/: glad.h
src/: glad.c
src/engin/core/: KeyListener.cpp  MouseListener.cpp
src/engine/component/: Component.cpp  Sprite.cpp  SpriteRenderer.cpp  Spritesheet.cpp  Transform.cpp
src/engine/core/: AScene.cpp  AbstractScene.cpp  Camera.cpp  GameObject.cpp  ImguiLayer.cpp  KeyListener.cpp  MainWindow.cpp  ManagerWindow.cpp  MouseListener.cpp  Prefab.cpp  Scene.cpp  Transform.cpp  Window.cpp  ZIndex.cpp
src/engine/editor/: FileDialog.cpp  FileSystemWindow.cpp  GameViewWindow.cpp  IProjectFileMonitor.cpp  ImGuiFileDialog.cpp  MenuBar.cpp  MyImGui.cpp  ProjectManagerWindow.cpp  PropertiesWindow.cpp  SceneHierarchyWindow.cpp  WindowsProjectFileMonitor.cpp
src/engine/event/: EventSystem.cpp
src/engine/node/: EditorCameraControls.cpp  EditorGridLines.cpp  EditorMouseControls.cpp  EditorSpriteGizmo.cpp  GridLines.cpp  Node.cpp  PrefabNode.cpp  Sprite.cpp  SpriteRenderer.cpp  Spritesheet.cpp  TileMap.cpp
src/engine/physics2D/: ACollider.cpp  Angular.cpp  Box2DCollider.cpp  CircleCollider.cpp  ColliderShape2D.cpp  Linear.cpp  Physics2D.cpp  RigidBody2D.cpp
src/engine/renderer/: Animation.cpp  AssetPool.cpp  DebugDraw.cpp  FrameBuffer.cpp  Line2D.cpp  PickingTexture.cpp  Rect.cpp  RenderBatch.cpp  Renderer.cpp  Shader.cpp  Sprite.cpp  Spritesheet.cpp  Texture.cpp
src/engine/script/: IScriptLayer.cpp  LuaBinder.cpp  LuaGlobalBinder.cpp  LuaMathBinder.cpp  LuaNodeBinder.cpp  LuaScriptLayer.cpp  LuaScriptManager.cpp  Script.cpp
src/engine/util/: AssetPool.cpp  Mat4Utils.cpp  Setting.cpp  StringUtils.cpp
